# geoshield-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_smoke.py  validate.sh
baselines/: random_agent.py  rules_agent.py
data/: task1_eval.jsonl  task1_train.jsonl  task2_eval.jsonl  task2_train.jsonl  task3_eval.jsonl  task3_train.jsonl  task4_eval.jsonl  task4_train.jsonl
server/: app.py
src/geoshield/: constants.py  models.py
src/geoshield/server/: environment.py  generators.py  graders.py  procedural_generator.py
static/: app.js  index.html  landing.css  landing.html  style.css
tests/: test_live.py  test_smoke.py  verify_server.py
